--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,41 @@
 /* Base styling */
 
 body {
-	display: grid;
-	justify-content: center;
-	align-items: center;
-    grid-row-gap: 50px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 svg {
     border: 1px solid rgba(0, 0, 0, .1);
 }
 
-/* Axes, ticks, grid lines, labels, titles */
+/* Containers */
 
-.axis .grid-line{
-    stroke: blue;
+.bar-chart-container,
+.area-chart-container {
+    margin-left: 20px;
+}
+
+/* Generic - Lines and dots */
+
+.line {
+    fill: none;    
+    stroke-width: 2;
+}
+
+.dot {
+  fill: #fff;
+  pointer-events: none;
+}
+
+/* Generic - Axes, ticks, grid lines, labels, titles */
+
+.axis .grid-line {
+    stroke: rgba(0, 0, 0, .5);
     shape-rendering: crispEdges;
     stroke-opacity: .1;
     fill: none;
 }
-
 
 .label.x,
 .label.y {
@@ -37,6 +53,23 @@ svg {
     text-anchor: middle;
 }
 
+/* Generic - Tooltips  */
+
+.areachart--tooltip,
+.barchart-tooltip {
+    position: absolute;
+    max-width: 200px;
+    height: auto;
+    padding: 5px 10px;
+    background-color: rgba(255, 255, 255, .8);
+    color: black;
+    font-family: sans-serif;
+    border: 1px solid rgba(0, 0, 0, .4);
+    border-radius: 3px;
+    box-shadow: .5px 1px 2px rgba(0, 0, 0, 0.3);
+    pointer-events: none;
+}
+
 /* Bar chart */
 .bar {
     transition: .5s filter;
@@ -46,32 +79,25 @@ svg {
     filter: brightness(80%);
 }
 
-.bar.hover-value {
-    text-anchor: middle;
-    font-family: sans-serif;
-    font-size: 14px;
-    fill: black;
-}
-
-.barchart-tooltip {
-    position: absolute;
-    max-width: 200px;
-    height: auto;
-    padding: 5px 10px;
-    background-color: rgba(255, 255, 255, .8);
-    color: black;
-    font-size: 12px;
-    font-family: sans-serif;
-    border: 1px solid rgba(0, 0, 0, .4);
-    border-radius: 3px;
-    box-shadow: .5px 1px 2px rgba(0, 0, 0, 0.3);
-    pointer-events: none;
-}
-
 .barchart-tooltip p {
     font-size: 10px;
     line-height: 20px;
     text-align: center;
 }
+
+/* Area chart */
+
+.areachart--area {
+    stroke: none;
+    fill-opacity: .2;
+    filter: brightness(100%);
+    transition:; all 1s;
+}
+
+.areachart--area:hover {
+    filter: brightness(50%);
+    fill-opacity: .9;
+}
+
 
 
