--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@ body {
 }
 
 svg {
-    border: 1px solid rgba(0, 0, 0, .1);
+    
+   
 }
 
 /* Containers */
@@ -16,7 +17,22 @@ svg {
 .line-chart-container,
 .pie-chart-container {
     margin-left: 20px;
+    border: 1px solid rgba(0, 0, 0, .1);
 }
+
+.line-chart-container {
+    padding: 10px;
+}
+
+/* Specific to line chart - to control positioning of the added dropdown menu */
+.line-chart {
+    /*z-index: -1;*/
+    display: grid;
+    justify-items: center;
+    /*align-items: center;*/
+}
+
+
 
 /* Generic - Lines and dots */
 
@@ -107,6 +123,21 @@ svg {
 }
 
 
+/* LINE CHART */
+
+.party-button {
+    font-family: sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+}
 
 
+/* MAP */
 
+.brexit {
+    margin: 50px auto;
+    border: 1px solid rgba(61, 58, 58, 0.1);
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
