--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ svg {
 }
 
 .line-chart-container {
-    padding: 10px;
+    /*padding: 10px;*/
 }
 
 /* Specific to line chart - to control positioning of the added dropdown menu */
@@ -32,18 +32,22 @@ svg {
     /*align-items: center;*/
 }
 
+.linechart-select-menu {
+    margin-bottom: 30px;
+}
+
 
 
 /* Generic - Lines and dots */
 
 .line {
     fill: none;    
-    stroke-width: 3;
+    stroke-width: 2;
     transition: all .5s;
 }
 
 .line-selected {
-    stroke-width: 5;
+    stroke-width: 4;
 }
 
 .dot {
@@ -70,7 +74,7 @@ svg {
 
 .title {
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     fill: black;
     fill-opacity: .5;
     text-anchor: middle;
