--- a/css/styles.css
+++ b/css/styles.css
@@ -55,10 +55,11 @@ body {
     grid-row: 1 / span 1;
     grid-column: 2 / span 5;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1;
     text-align: center;
     padding-top: 30px;
+    z-index: 1;
 }
 
 .header h1 {
@@ -217,9 +218,15 @@ body {
     pointer-events: none;
 }
 
+.legend-text,
 .legend,
 .arc {
     fill-opacity: 0.8;
+    /*transition: fill-opacity .5s;*/
+}
+
+.opaque {
+    fill-opacity: 0.9;
 }
 
 
