--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
 
 .header h1 {
     padding-bottom: 10px;
+    letter-spacing: 2px;
 }
 
 .header p {
@@ -275,8 +276,8 @@ body {
 
 .display-box {
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: 10px;
+    right: 10px;
     /*max-width: 100px;
     height: auto;*/
     font-family: sans-serif;
