--- a/sass/root.scss
+++ b/sass/root.scss
@@ -7,6 +7,7 @@
 @import "components/line-chart";
 @import "components/map";
 @import "components/pie-chart";
+@import "components/stacked-chart";
 
 @import "grid/grid";
 
