--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -7,9 +7,13 @@
     &__display {
     	width: 600px;
 	    height: 400px;
-	    background-color: rgba(0, 0, 0, 0.1);
+	    // background-color: rgba(0, 0, 0, 0.1);
 	    margin-top: 50px;
 	    margin-right: -100px;
 	    z-index: 1;
+        display: grid;
+        justify-items: center;
+        align-items: end;
+        padding-bottom: 3rem;
     }
 }
