--- a/sass/layout/_updateable-charts.scss
+++ b/sass/layout/_updateable-charts.scss
@@ -1,6 +1,7 @@
 .updateable-charts {
     grid-row: 3 / span 1;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));    
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));    
     margin-top: -100px;
+    justify-items: center;
 }
