--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
 
 
 /***** CSS reset *****/
@@ -19,7 +18,7 @@ html {
 }
     
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7; 
 }
