--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -30,14 +30,13 @@
     fill-opacity: 0.8;
 }
 
-/* Map - Dispay box */
+/* Map - Display box */
 
 .display-box {
     position: absolute;
-    top: 130px;
-    right: 10px;
-    font-family: sans-serif;
-    font-size: 14px;
+    top: 13rem;
+    right: 1rem;
+    font-size: 1.4rem;
     color: #ffffff;
     border: none;
     padding: 1rem 2rem;
