--- a/sass/grid/_grid.scss
+++ b/sass/grid/_grid.scss
@@ -2,5 +2,6 @@
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-rows: min-content min-content min-content 200px;   
+    grid-template-rows: min-content min-content min-content 20rem;   
+    // grid-row-gap: 5rem;
 }
