--- a/sass/layout/_updateable-charts.scss
+++ b/sass/layout/_updateable-charts.scss
@@ -2,6 +2,8 @@
     grid-row: 3 / span 1;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));    
-    margin-top: -100px;
+    margin-top: -10rem;
     justify-items: center;
+    background-color: #f4f4f4;
+    padding: 8rem 0;
 }
